[package]
name = "worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"

[dependencies]
async-lock.workspace = true
js-sys.workspace = true
nexum-chrome-sys.workspace = true
nexum-chrome-gloo.workspace = true
nexum-primitives.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
futures.workspace = true
gloo-utils.workspace = true
tracing.workspace = true
wasm-tracing.workspace = true
console_error_panic_hook.workspace = true
url.workspace = true
jsonrpsee.workspace = true
gloo-timers.workspace = true
alloy-chains.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
